Fixed padding for background video on mobile
Added 60px top padding to background video when viewed on mobile, and 100px top padding to the logo over that background video, also on mobile.

--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ main {
   position: relative;
 }
 
+@media (max-width: 768px) {
+  #video-section {
+    padding-top: 60px;
+  }
+}
+
 .video-logo {
   max-width: 100%;
   width: 80%;
@@ -110,6 +116,7 @@ main {
   .logo-overlay {
     top: 40%;
     width: 90vw; /* Adjust this value as needed */
+    padding-top: 100px;
   }
 }
 
